force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Asset_Effective_Quantity__c.field-meta.xml
<CustomField>
        <fullName>QS_Asset_Effective_Quantity__c</fullName>
        <description>Stamped out with this WFR: https://cs66.salesforce.com/01Q0v0000006ljV</description>
        <inlineHelpText>Stamped out with this WFR: https://cs66.salesforce.com/01Q0v0000006ljV</inlineHelpText>
        <label>Asset Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>