force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Asset_List_Price__c.field-meta.xml
<CustomField>
        <fullName>QS_Asset_List_Price__c</fullName>
        <formula>SBQQ__Asset__r.SBQQ__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>