force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Created_By_Apex__c.field-meta.xml
<CustomField>
        <fullName>QS_Created_By_Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By Apex</label>
        <type>Checkbox</type>
    </CustomField>