force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Customer_Asset_Unique_Id__c.field-meta.xml
<CustomField>
        <fullName>QS_Customer_Asset_Unique_Id__c</fullName>
        <formula>SBQQ__Asset__r.AccountId + SBQQ__Asset__r.Product2Id + SBQQ__Subscription__r.SBQQ__Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Asset Unique Id</label>
        <type>Text</type>
    </CustomField>