force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Percent_Of_Total__c.field-meta.xml
<CustomField>
        <fullName>QS_Percent_Of_Total__c</fullName>
        <formula>IF(SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__SubscriptionPercent__c &lt;&gt; null, SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__SubscriptionPercent__c,  SBQQ__Subscription__r.SBQQ__Product__r.SBQQ__SubscriptionPercent__c )</formula>
        <label>Percent Of Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>