force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Subscription_Discount__c.field-meta.xml
<CustomField>
    <fullName>QS_Subscription_Discount__c</fullName>
    <description>Per unit discount</description>
    <formula>IF(SBQQ__Subscription__r.SBQQ__AdditionalDiscountAmount__c &lt;&gt; 0, 
			SBQQ__Subscription__r.SBQQ__AdditionalDiscountAmount__c , 
			IF(SBQQ__Subscription__r.SBQQ__Discount__c &lt;&gt; 0, 
						SBQQ__Subscription__r.SBQQ__Discount__c * QS_Subscription_Price__c, 
						0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Per unit discount</inlineHelpText>
    <label>Subscription Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>