force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Subscription_Discount_Weight__c.field-meta.xml
<CustomField>
        <fullName>QS_Subscription_Discount_Weight__c</fullName>
        <formula>IF(SBQQ__Subscription__r.SBQQ__ListPrice__c == 0, 0, SBQQ__Asset__r.SBQQ__ListPrice__c / SBQQ__Subscription__r.SBQQ__ListPrice__c * QS_Percent_Of_Total__c * SBQQ__Asset__r.Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Discount Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>