force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Subscription_Price__c.field-meta.xml
<CustomField>
    <fullName>QS_Subscription_Price__c</fullName>
    <formula>CASE(SBQQ__Asset__r.Product2.SBQQ__SubscriptionBase__c, &#39;Net&#39;, SBQQ__Subscription__r.SBQQ__NetPrice__c, 
SBQQ__Subscription__r.SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>