force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_Subscription_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_Subscription_Quantity__c</fullName>
    <formula>IF(SBQQ__Subscription__r.SBQQ__QuoteLine__c &lt;&gt; null, 
    /* Reduction logic */
			IF(SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__EffectiveQuantity__c &lt; 0,
						/* full reduction */
        if(SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__Quantity__c == 0,
            if(QS_Created_By_Apex__c, SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__PriorQuantity__c, 0),
									/*partial reduction */
						    SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__Quantity__c), 
        /* upsell */
						SBQQ__Subscription__r.SBQQ__QuoteLine__r.SBQQ__EffectiveQuantity__c),
						/* net new */
				SBQQ__Subscription__r.SBQQ__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>