force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/QS_UpsertKey__c.field-meta.xml
<CustomField>
        <fullName>QS_UpsertKey__c</fullName>
        <description>SubscriptionId + AssetId</description>
        <externalId>true</externalId>
        <label>UpsertKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>